<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".basics.MainActivity">

    <Button
        android:id="@+id/open_calculator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_to_calculator"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/open_xo_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_to_xo_game"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/open_calculator_button" />

    <Button
        android:id="@+id/open_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_to_login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/open_xo_game_button" />
</androidx.constraintlayout.widget.ConstraintLayout>